--- a/css/style.css
+++ b/css/style.css
@@ -1,24 +1,32 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,600;0,700;1,500&display=swap');
-*{
+
+* {
     margin: 0;
-padding: 0;
+    padding: 0;
 }
-html{
+
+html {
     scroll-behavior: smooth;
 }
-.logo{
+
+body {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+.logo {
     width: 20%;
     display: flex;
     justify-content: center;
     align-items: center;
 }
-.logo img{
+
+.logo img {
     width: 26%;
     margin: 5px;
-    border: 3px solid white;
     border-radius: 50px;
 }
-.navbar{
+
+.navbar {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -27,48 +35,64 @@ html{
     cursor: pointer;
 
 }
-.nav-list{
-width: 70%;
-display: flex;
-align-items: center;
+
+.nav-list {
+    width: 70%;
+    display: flex;
+    align-items: center;
 
 }
 
-.nav-list li{
+.nav-list li {
     list-style: none;
     padding: 26px 30px;
 }
 
-.nav-list li a{
-   text-decoration: none;
-  color: white;
-  font-size: 18px;  
+.nav-list li a {
+    text-decoration: none;
+    color: white;
+    font-size: 18px;
 }
 
-.nav-list li a:hover{
-   text-decoration: none;
-   color: grey;
- }
-.rightNav{
+.nav-list li a:hover {
+    text-decoration: none;
+    color: grey;
+}
+
+.rightNav {
     width: 30%;
-    text-align: right;
+    /* text-align: right; */
     padding: 0 23px;
+    display: flex;
+    justify-content: flex-end;
+    gap: 4px;
 }
-#search{
+
+#search {
     padding: 5px;
-font-size: 17px;
-border: 2px solid grey;
-border-radius: 9px;
+    font-size: 17px;
+    border: 2px solid #8080806e;
+    border-radius: 9px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    background: transparent;
+    color: white;
 }
-.background{
-    background: rgba(0,0,0,0.7) url("../img/aap.jpg");
-    background-size: cover;
+
+.background {
+    background: rgba(0, 0, 0, 0.7) url(../img/dark-neon-yellow-astronaut-0fw4ztloio65798s.jpg);
     background-blend-mode: darken;
+    background-size: max(1400px, 100vw);
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: max(2009px, 100vw);
+    background-repeat: no-repeat;
 }
-.firstsection{
-    height: 100vh;  
+
+.firstsection {
+    height: 100vh;
 }
-.box-main{
+
+.box-main {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -77,68 +101,76 @@ border-radius: 9px;
     max-width: 80%;
     margin: auto;
     height: 100%;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+
 }
-.firstHalf{
-    width: 101%;
+
+.firstHalf {
     display: flex;
     justify-content: center;
     flex-direction: column;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    gap: 9px;
+    margin-right: 135px;
 }
-.secondHalf{
+
+/* 
+.secondHalf {
     width: 18%;
+} */
+
+.secondHalf img {
+    width: 20vw;
+    border-radius: 100px;
+
 }
 
-.secondHalf img{
-    width: 202px;
-    border: 2px solid white;
-    border-radius: 150%;}
 
-    
-    
-.text-big{
-font-size: 46px;
+
+.text-big {
+    font-size: 46px;
 }
 
 .firstHalf .text-big {
-    
+
     font-size: 61px;
     white-space: pre-line;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
-@keyframes text{
-    0%{
+@keyframes text {
+    0% {
         width: 0ch;
     }
-    50%{
+
+    50% {
         width: 15ch;
     }
 }
-.text-small{
+
+.text-small {
     font-size: 17px;
 }
-    
-.btn{
-    
-    padding: 8px 20px;
-margin: 7px 3px;
-border: 2px solid white;
-border-radius: 8px;
-background: none;
-color: white;
-cursor: pointer;
-font-size: 15px;
-}
-.btn-sm{
+
+
+.btn-sm {
     padding: 6px 10px;
     vertical-align: middle;
     font-size: 14px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    border-radius: 27px;
+    background: transparent;
+    color: wheat;
+    border: 2px solid #8080806e;
 }
 
-.btn-dark{
+.btn-dark {
     color: black;
     border: 2px solid grey;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
-.section{
+
+.section {
     justify-content: space-evenly;
     align-items: center;
     display: flex;
@@ -146,164 +178,219 @@ font-size: 15px;
     margin: auto;
     font-family: 'Poppins', sans-serif;
     padding: 20px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
-.paras{
+.paras {
     padding: 0 65px;
 }
 
-.section-Left{
+.section-Left {
     display: flex;
     align-items: center;
     justify-content: space-evenly;
     max-width: 80%;
     margin: auto;
     flex-direction: row-reverse;
-    }
+}
 
-    .sectionTag{
-        padding: 16px 0;
-    }
-    .sectiosubTag{
-        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    }
-    .thumbnail img{
-        width: 250px;
+.sectionTag {
+    padding: 16px 0;
+}
+
+.sectiosubTag {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+.thumbnail img {
+    width: 250px;
     border: 2px solid black;
     border-radius: 142px;
     margin-top: 110px;
 
-    }
-    .Contact{
-        background-color: #f6f5f4;
-        height: 833px;
-    }
-    .text-center{
-        text-align: center;
-        padding-top: 30px;
-        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-        font-size: 35px;
-    }
-    .form{
-        max-width: 62%;
-        margin: 25px auto;
-    }
-    .form-input{
-        margin: 14px 0;
-        width: 100%;
-        font-size: 18px;
-        border: 2px solid grey;
-        border-radius: 6px;
-        padding: 5px 10px;
-        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    }
-    .text-footer{
-        text-align: center;
-        font-family: cursive;
-        display: flex;
-        justify-content: center;
-        padding: 30px 0;
-        color: white;
-    }
-    .burger{
+}
+
+.Contact {
+    background-color: #f6f5f4;
+    height: 833px;
+}
+
+.text-center {
+    text-align: center;
+    padding-top: 30px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 35px;
+}
+
+.form {
+    max-width: 62%;
+    margin: 25px auto;
+}
+
+.form-input {
+    margin: 14px 0;
+    width: 100%;
+    font-size: 18px;
+    border: 2px solid grey;
+    border-radius: 6px;
+    padding: 5px 10px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+.text-footer {
+    text-align: center;
+    font-family: cursive;
+    display: flex;
+    justify-content: center;
+    padding: 30px 0;
+    color: white;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+.burger {
     position: absolute;
     cursor: pointer;
     right: 5%;
     top: 15px;
     display: none;
-    }
-    .line{
-        width: 33px;
-        background-color: white;
-        height: 4px;
-        margin: 5px 3px;
-    }
+}
 
-    
-    
-    @media only screen and (max-width: 1140px){
-        .nav-list{
-            flex-direction: column;
-        }
+.line {
+    width: 33px;
+    background-color: white;
+    height: 4px;
+    margin: 5px 3px;
+}
 
-        .logo img {
-            width: 80%;}
-            
-        .navbar{
-            flex-direction: column;
-            transition: all 0.7s ease-out;
-            height: 447px;
-        }
-        .secondHalf
-         {
-            width: 34%;
-        }
+.buttons .btn {
+    background-color: transparent;
+    color: white;
+    border: 1px solid #ffffff70;
+    padding: 9px;
+    border-radius: 6px;
+    margin-top: 9px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
 
-        .rightNav{
-            text-align: center;
-            opacity: 0;
-        }
-        .box-main{
-            flex-direction: column-reverse;
-            max-width: 100%;
-        }
-        #search{
-            width: 100%;
-        }
-        .burger{
-            display: block;
-        }
-        .h-nav-resp{
-            height: 50px;
-        }
-        .v-class-resp{
-            opacity: 0;
-        }
-        .section{
-            flex-direction: column-reverse;
-        }
-        .firstHalf .text-big
-         {
-            font-size: 32px;
-            white-space: pre-line;
-        }
-        .text-small{
-            text-align: center;
-            font-size: 15px;
-        }
-        
-        .text-big{
-            text-align: center;
-            font-size: 27px;
-        }
+.btn a {
+    color: white;
+    text-decoration: none;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
 
-        .thumbnail img{
-
-            width: 190px;
-
-            }
-   
-        .buttons{
-            text-align: center;
-        }
-        .paras{
-            padding: 0px;
-        }
-        .section-left{
-            display: flex;
-            flex-direction: column-reverse;
+.buttons .btn:hover {
+    background-color: rgba(63, 63, 63, 0.788);
 
 }
+
+
+@media only screen and (max-width: 1180px) {
+    .nav-list {
+        flex-direction: column;
     }
 
+    .logo img {
+        width: 60%;
+    }
+
+    .navbar {
+        flex-direction: column;
+        transition: all 0.7s ease-out;
+        height: 447px;
+        padding: 5px;
+        background-blend-mode: inherit ;
+    }
+
+    .secondHalf {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .firstHalf {
+        margin-right: 0px;
+    }
+
+    .rightNav {
+        text-align: center;
+        opacity: 0;
+    }
+
+    .box-main {
+        flex-direction: column-reverse;
+        max-width: 100%;
+    }
+
+    #search {
+        width: 100%;
+    }
+
+    .burger {
+        display: block;
+    }
+
+    .h-nav-resp {
+        height: 50px;
+        background-blend-mode: darken;
+    }
+
+    .v-class-resp {
+        display: none;
+    }
+
+    .v-img{
+        box-shadow: 1px 1px 20px 4px #fca114;
+    }
+
+    .section {
+        flex-direction: column-reverse;
+    }
+
+    .firstHalf .text-big {
+        font-size: 32px;
+        white-space: pre-line;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        margin-top: 10px;
+    }
+
+    .text-small {
+        text-align: center;
+        font-size: 15px;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    }
+
+    .text-big {
+        text-align: center;
+        font-size: 27px;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    }
+
+    .thumbnail img {
+
+        width: 190px;
+
+    }
+
+    .buttons {
+        text-align: center;
+    }
+
+    .paras {
+        padding: 0px;
+    }
+
+    .section-left {
+        display: flex;
+        flex-direction: column-reverse;
+
+    }
+}
+
+@media only screen and (max-width: 1000px){
+
+    .firstHalf .text-big{
+        font-size: 24px;
+    }        
 
 
-
-
-
-
-
-
-
-
-
+}
